# grpc-healthy-ping-pong

./: .gitignore  README.md  client.py  config.json  makefile  pyproject.toml  run.sh  server.py  start-client-then-server.sh
proto/: pingpong.proto
