[tool.poetry]
name = "grpc-pingpong"
version = "0.1.0"
description = "A minimal gRPC ping/pong example in Python."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.55.0"
grpcio-tools = "^1.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
